--- a/addgroup.html
+++ b/addgroup.html
@@ -423,19 +423,19 @@
     }
   </style>
 
-  <!-- Firebase CDN -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+ <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 
   <script>
-    // ✅ Firebase Config (apna config yahan dalna hai)
+    // 🔥 100% NO LOOP - PERFECT LOGIN
     const firebaseConfig = {
-      apiKey: "AIzaSyCwdlnLXcXauh3_YmY6cwswqzcieMOHI0Y",
-      authDomain: "ludogroup-a530a.firebaseapp.com",
-      projectId: "ludogroup-a530a",
-      storageBucket: "ludogroup-a530a.appspot.com",
-      messagingSenderId: "838421084676",
-      appId: "1:838421084676:web:9e02670e280eafcd86d351"
+      apiKey: "AIzaSyAMhdxU4pDqby11Ymixup2aCoEY5eZ3e7M",
+      authDomain: "jokerludogroup-a8c97.firebaseapp.com",
+      projectId: "jokerludogroup-a8c97",
+      storageBucket: "jokerludogroup-a8c97.firebasestorage.app",
+      messagingSenderId: "1083106195650",
+      appId: "1:1083106195650:web:fae27e9bb0798e96f4235b"
     };
 
     firebase.initializeApp(firebaseConfig);
