--- a/join.html
+++ b/join.html
@@ -6,7 +6,7 @@
   <title>Live Ludo Groups - JokerLudo | Join WhatsApp Groups 2026</title>
 
   <!-- SAME SEO + Analytics -->
-  <meta name="description" content="Join 1000+ Live Ludo WhatsApp Groups. Ludo King, Star, Betting, Earning groups updated every minute. Instant join links!" />
+  <meta name="description" content="Join 1000+ Live Ludo WhatsApp Groups. Ludo King, Star, Betting, Earning groups updated every minute." />
   <meta name="keywords" content="Ludo WhatsApp group join, live ludo groups, Ludo King group link" />
   <meta name="theme-color" content="#8b5cf6" />
   
@@ -15,7 +15,7 @@
   <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-EZF7SRX6EJ');</script>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -28,8 +28,6 @@
       --shadow: 0 10px 40px rgba(139, 92, 246, 0.2);
       --text-dark: #1e293b;
       --text-light: #64748b;
-      --success: #22c55e;
-      --danger: #ef4444;
     }
 
     body {
@@ -39,7 +37,7 @@
       color: var(--text-dark);
     }
 
-    /* 🔥 PERFECT RESPONSIVE HEADER */
+    /* 🔥 HEADER */
     .header {
       position: fixed;
       top: 0;
@@ -48,7 +46,7 @@
       backdrop-filter: blur(20px);
       border-bottom: 1px solid rgba(0,0,0,0.05);
       z-index: 1000;
-      padding: 0.5rem 0;
+      padding: 12px 0;
     }
 
     .nav-container {
@@ -58,7 +56,6 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      height: 70px;
     }
 
     /* 🔥 LOGO */
@@ -116,7 +113,7 @@
       transform: translateY(-1px);
     }
 
-    /* 🔥 MOBILE HAMBURGER */
+    /* 🔥 MOBILE HAMBURGER BUTTON */
     .mobile-menu-btn {
       display: none;
       background: none;
@@ -127,63 +124,110 @@
       padding: 8px;
       border-radius: 8px;
       transition: all 0.3s ease;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .mobile-menu-btn:hover {
       background: rgba(139,92,246,0.1);
     }
 
-    /* 🔥 MOBILE MENU */
+    /* 🔥 MOBILE MENU - FIXED POSITION */
     .mobile-menu {
       position: fixed;
-      top: 70px;
+      top: 74px;  /* Header height + padding */
       left: 0;
       width: 100%;
+      height: calc(100vh - 74px);
       background: rgba(255,255,255,0.98);
-      backdrop-filter: blur(20px);
-      border-top: 1px solid rgba(0,0,0,0.05);
-      transform: translateY(-100%);
+      backdrop-filter: blur(25px);
+      border-top: 1px solid rgba(0,0,0,0.08);
+      transform: translateX(-100%);
       opacity: 0;
       visibility: hidden;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       z-index: 999;
+      overflow-y: auto;
     }
 
     .mobile-menu.active {
-      transform: translateY(0);
+      transform: translateX(0);
+      opacity: 1;
+      visibility: visible;
+    }
+
+    /* 🔥 MOBILE MENU OVERLAY */
+    .mobile-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      opacity: 0;
+      visibility: hidden;
+      z-index: 998;
+      transition: all 0.4s ease;
+    }
+
+    .mobile-overlay.active {
       opacity: 1;
       visibility: visible;
     }
 
     .mobile-nav-list {
       list-style: none;
-      padding: 1rem 1.5rem;
+      padding: 2rem 1.5rem;
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 16px;
     }
 
     .mobile-nav-link {
       display: block;
-      padding: 14px 20px;
-      background: rgba(255,255,255,0.8);
-      border-radius: 12px;
+      padding: 18px 24px;
+      background: rgba(255,255,255,0.9);
+      border-radius: 16px;
       text-decoration: none;
       font-weight: 600;
-      font-size: 16px;
+      font-size: 17px;
       color: var(--text-dark);
       transition: all 0.3s ease;
       border: 2px solid transparent;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+      position: relative;
+      overflow: hidden;
     }
 
-    .mobile-nav-link.active, .mobile-nav-link:hover {
-      background: var(--purple);
+    .mobile-nav-link::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 0;
+      background: linear-gradient(135deg, var(--purple), var(--dark-purple));
+      transition: width 0.3s ease;
+      z-index: -1;
+    }
+
+    .mobile-nav-link:hover::before,
+    .mobile-nav-link.active::before {
+      width: 100%;
+    }
+
+    .mobile-nav-link:hover,
+    .mobile-nav-link.active {
       color: white;
       border-color: var(--purple);
-      transform: translateX(8px);
+      transform: translateX(12px);
+      box-shadow: 0 8px 25px rgba(139,92,246,0.3);
     }
 
-    /* 🔥 MAIN CONTENT */
+    /* 🔥 MAIN CONTENT (SAME) */
     .main-content {
       margin-top: 90px;
       padding: 2rem 1rem;
@@ -191,7 +235,6 @@
       margin: 90px auto 0;
     }
 
-    /* 🔥 REST SAME STYLES (Hero, Filters, Groups - No change) */
     .hero-section { text-align: center; margin-bottom: 3rem; }
     .hero-title { 
       font-size: clamp(2.5rem, 6vw, 4rem);
@@ -202,126 +245,15 @@
       background-clip: text;
       margin-bottom: 1rem;
     }
-    .hero-stats { display: flex; justify-content: center; gap: 3rem; flex-wrap: wrap; margin-top: 1rem; }
-    .stat-item { text-align: center; font-weight: 700; color: var(--purple); }
-    .stat-number { font-size: 2rem; display: block; }
-
-    .filter-tabs {
-      display: flex;
-      gap: 12px;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin-bottom: 3rem;
-      padding: 0 1rem;
-    }
-    .filter-tab {
-      padding: 12px 24px;
-      background: rgba(255,255,255,0.8);
-      border: 2px solid rgba(139,92,246,0.2);
-      border-radius: 50px;
-      font-weight: 600;
-      font-size: 15px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      backdrop-filter: blur(10px);
-      color: var(--text-dark);
-      white-space: nowrap;
-    }
-    .filter-tab.active, .filter-tab:hover {
-      background: var(--purple);
-      color: white;
-      border-color: var(--purple);
-      transform: translateY(-2px);
-      box-shadow: 0 10px 30px rgba(139,92,246,0.3);
-    }
-
-    .groups-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-      gap: 2rem;
-      margin-bottom: 3rem;
-    }
-
-    .group-card {
-      background: rgba(255,255,255,0.9);
-      backdrop-filter: blur(20px);
-      border-radius: 24px;
-      padding: 2rem;
-      border: 1px solid rgba(255,255,255,0.2);
-      box-shadow: 0 20px 50px rgba(0,0,0,0.1);
-      transition: all 0.4s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .group-card::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 4px;
-      background: linear-gradient(90deg, var(--purple), var(--gold));
-    }
-
-    .group-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 30px 70px rgba(0,0,0,0.15);
-    }
-
-    .group-header { display: flex; align-items: flex-start; gap: 1rem; margin-bottom: 1.2rem; }
-    .group-avatar {
-      width: 60px;
-      height: 60px;
-      border-radius: 16px;
-      background: linear-gradient(135deg, var(--purple), var(--dark-purple));
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      color: white;
-      font-weight: 700;
-      flex-shrink: 0;
-      box-shadow: 0 8px 25px rgba(139,92,246,0.3);
-    }
-    .group-info h3 { font-size: 1.4rem; font-weight: 700; color: var(--text-dark); margin-bottom: 0.25rem; line-height: 1.3; }
-    .group-meta { display: flex; gap: 1rem; align-items: center; flex-wrap: wrap; margin-bottom: 1rem; }
-    .group-type { background: rgba(139,92,246,0.1); color: var(--purple); padding: 6px 16px; border-radius: 20px; font-size: 13px; font-weight: 600; }
-    .group-time { color: var(--text-light); font-size: 14px; }
-    .group-desc { color: var(--text-light); line-height: 1.6; margin-bottom: 1.5rem; font-size: 15px; }
-
-    .join-btn {
-      width: 100%;
-      background: linear-gradient(135deg, var(--purple), var(--gold));
-      color: white;
-      padding: 16px 24px;
-      border: none;
-      border-radius: 16px;
-      font-size: 16px;
-      font-weight: 700;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      text-decoration: none;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      box-shadow: 0 10px 30px rgba(139,92,246,0.4);
-    }
-
-    .join-btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 20px 40px rgba(139,92,246,0.5);
-    }
 
     /* 🔥 MOBILE RESPONSIVE */
     @media (max-width: 768px) {
       .nav-menu {
-        display: none;
+        display: none !important;
       }
 
       .mobile-menu-btn {
-        display: block;
+        display: flex !important;
       }
 
       .main-content {
@@ -333,23 +265,6 @@
         grid-template-columns: 1fr;
         gap: 1.5rem;
       }
-
-      .hero-stats {
-        gap: 1.5rem;
-      }
-
-      .stat-number {
-        font-size: 1.5rem;
-      }
-
-      .filter-tabs {
-        gap: 8px;
-      }
-
-      .filter-tab {
-        padding: 10px 20px;
-        font-size: 14px;
-      }
     }
 
     @media (max-width: 480px) {
@@ -360,11 +275,31 @@
       .nav-container {
         padding: 0 1rem;
       }
-
-      .hero-title {
-        font-size: 2.2rem;
-      }
     }
+
+    /* 🔥 REST OF STYLES (Groups, Filters - SAME as before) */
+    .hero-stats { display: flex; justify-content: center; gap: 3rem; flex-wrap: wrap; margin-top: 1rem; }
+    .stat-item { text-align: center; font-weight: 700; color: var(--purple); }
+    .stat-number { font-size: 2rem; display: block; }
+    .filter-tabs { display: flex; gap: 12px; justify-content: center; flex-wrap: wrap; margin-bottom: 3rem; padding: 0 1rem; }
+    .filter-tab { padding: 12px 24px; background: rgba(255,255,255,0.8); border: 2px solid rgba(139,92,246,0.2); border-radius: 50px; font-weight: 600; font-size: 15px; cursor: pointer; transition: all 0.3s ease; backdrop-filter: blur(10px); color: var(--text-dark); white-space: nowrap; }
+    .filter-tab.active, .filter-tab:hover { background: var(--purple); color: white; border-color: var(--purple); transform: translateY(-2px); box-shadow: 0 10px 30px rgba(139,92,246,0.3); }
+    .groups-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem; margin-bottom: 3rem; }
+    .group-card { background: rgba(255,255,255,0.9); backdrop-filter: blur(20px); border-radius: 24px; padding: 2rem; border: 1px solid rgba(255,255,255,0.2); box-shadow: 0 20px 50px rgba(0,0,0,0.1); transition: all 0.4s ease; position: relative; overflow: hidden; }
+    .group-card::before { content: ''; position: absolute; top: 0; left: 0; right: 0; height: 4px; background: linear-gradient(90deg, var(--purple), var(--gold)); }
+    .group-card:hover { transform: translateY(-8px); box-shadow: 0 30px 70px rgba(0,0,0,0.15); }
+    .group-header { display: flex; align-items: flex-start; gap: 1rem; margin-bottom: 1.2rem; }
+    .group-avatar { width: 60px; height: 60px; border-radius: 16px; background: linear-gradient(135deg, var(--purple), var(--dark-purple)); display: flex; align-items: center; justify-content: center; font-size: 24px; color: white; font-weight: 700; flex-shrink: 0; box-shadow: 0 8px 25px rgba(139,92,246,0.3); }
+    .group-info h3 { font-size: 1.4rem; font-weight: 700; color: var(--text-dark); margin-bottom: 0.25rem; line-height: 1.3; }
+    .group-meta { display: flex; gap: 1rem; align-items: center; flex-wrap: wrap; margin-bottom: 1rem; }
+    .group-type { background: rgba(139,92,246,0.1); color: var(--purple); padding: 6px 16px; border-radius: 20px; font-size: 13px; font-weight: 600; }
+    .group-time { color: var(--text-light); font-size: 14px; }
+    .group-desc { color: var(--text-light); line-height: 1.6; margin-bottom: 1.5rem; font-size: 15px; }
+    .join-btn { width: 100%; background: linear-gradient(135deg, var(--purple), var(--gold)); color: white; padding: 16px 24px; border: none; border-radius: 16px; font-size: 16px; font-weight: 700; cursor: pointer; transition: all 0.3s ease; text-decoration: none; display: inline-flex; align-items: center; justify-content: center; gap: 8px; box-shadow: 0 10px 30px rgba(139,92,246,0.4); }
+    .join-btn:hover { transform: translateY(-3px); box-shadow: 0 20px 40px rgba(139,92,246,0.5); }
+    .loading { display: flex; justify-content: center; padding: 4rem; }
+    .spinner { width: 50px; height: 50px; border: 4px solid rgba(139,92,246,0.1); border-top: 4px solid var(--purple); border-radius: 50%; animation: spin 1s linear infinite; }
+    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
 </head>
 <body>
@@ -377,7 +312,7 @@
         <span class="logo-text">JokerLudo</span>
       </a>
       
-      <!-- 🔥 DESKTOP MENU -->
+      <!-- DESKTOP -->
       <ul class="nav-menu">
         <li><a href="index.html" class="nav-link">🏠 Home</a></li>
         <li><a href="join.html" class="nav-link active">👥 Join Groups</a></li>
@@ -386,25 +321,28 @@
         <li><a href="contact.html" class="nav-link">📧 Contact</a></li>
       </ul>
 
-      <!-- 🔥 MOBILE HAMBURGER -->
+      <!-- MOBILE HAMBURGER -->
       <button class="mobile-menu-btn" id="mobileMenuBtn">
         <i class="fas fa-bars"></i>
       </button>
     </div>
-
-    <!-- 🔥 MOBILE SLIDE DOWN MENU -->
-    <nav class="mobile-menu" id="mobileMenu">
-      <ul class="mobile-nav-list">
-        <li><a href="index.html" class="mobile-nav-link">🏠 Home</a></li>
-        <li><a href="join.html" class="mobile-nav-link active">👥 Join Groups</a></li>
-        <li><a href="Addgrouplink.html" class="mobile-nav-link">➕ Add Group</a></li>
-        <li><a href="rules.html" class="mobile-nav-link">📜 Rules</a></li>
-        <li><a href="contact.html" class="mobile-nav-link">📧 Contact</a></li>
-      </ul>
-    </nav>
   </header>
 
-  <!-- 🔥 SAME MAIN CONTENT -->
+  <!-- 🔥 MOBILE OVERLAY -->
+  <div class="mobile-overlay" id="mobileOverlay"></div>
+
+  <!-- 🔥 MOBILE MENU - FULL HEIGHT -->
+  <nav class="mobile-menu" id="mobileMenu">
+    <ul class="mobile-nav-list">
+      <li><a href="index.html" class="mobile-nav-link">🏠 Home</a></li>
+      <li><a href="join.html" class="mobile-nav-link active">👥 Join Groups</a></li>
+      <li><a href="Addgrouplink.html" class="mobile-nav-link">➕ Add Group</a></li>
+      <li><a href="rules.html" class="mobile-nav-link">📜 Rules</a></li>
+      <li><a href="contact.html" class="mobile-nav-link">📧 Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- 🔥 MAIN CONTENT -->
   <main class="main-content">
     <div class="hero-section">
       <h1 class="hero-title">👥 Live Groups</h1>
@@ -436,40 +374,43 @@
     </div>
 
     <div class="no-groups" id="noGroupsMsg" style="display: none;">
-      <div class="no-groups-icon">🎮</div>
+      <div style="font-size:4rem;">🎮</div>
       <h3>No Groups Found</h3>
       <p>Add your group using <a href="Addgrouplink.html">Add Group</a> page!</p>
     </div>
   </main>
 
-  <!-- 🔥 FIREBASE + SAME JS LOGIC -->
+  <!-- 🔥 FIREBASE + MOBILE MENU JS -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
   
   <script>
-    // 🔥 MOBILE MENU TOGGLE
+    // 🔥 MOBILE MENU - 100% WORKING
     const mobileMenuBtn = document.getElementById('mobileMenuBtn');
     const mobileMenu = document.getElementById('mobileMenu');
+    const mobileOverlay = document.getElementById('mobileOverlay');
 
-    mobileMenuBtn.addEventListener('click', () => {
-      mobileMenu.classList.toggle('active');
-    });
+    function openMobileMenu() {
+      mobileMenu.classList.add('active');
+      mobileOverlay.classList.add('active');
+      document.body.style.overflow = 'hidden';
+    }
 
-    // Close menu on link click
+    function closeMobileMenu() {
+      mobileMenu.classList.remove('active');
+      mobileOverlay.classList.remove('active');
+      document.body.style.overflow = '';
+    }
+
+    mobileMenuBtn.addEventListener('click', openMobileMenu);
+    mobileOverlay.addEventListener('click', closeMobileMenu);
+
+    // Close on link click
     document.querySelectorAll('.mobile-nav-link').forEach(link => {
-      link.addEventListener('click', () => {
-        mobileMenu.classList.remove('active');
-      });
+      link.addEventListener('click', closeMobileMenu);
     });
 
-    // Close on outside click
-    document.addEventListener('click', (e) => {
-      if (!mobileMenu.contains(e.target) && !mobileMenuBtn.contains(e.target)) {
-        mobileMenu.classList.remove('active');
-      }
-    });
-
-    // 🔥 FIREBASE (SAME AS BEFORE)
+    // 🔥 FIREBASE (SAME)
     const firebaseConfig = {
       apiKey: "AIzaSyCwdlnLXcXauh3_YmY6cwswqzcieMOHI0Y",
       authDomain: "ludogroup-a530a.firebaseapp.com",
