--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
           🚀 Official Joker Group
         </a>
         <a href="join.html" class="cta-primary">👥 View All Groups</a>
+        <a href="Addgrouplink.html" class="cta-primary">➕ Add Ludo Group ➕</a>
       </div>
     </section>
 
