Refactor HTML structure and update navigation

--- a/index.html
+++ b/index.html
@@ -1,260 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JokerLudo - Premium Ludo Groups</title>
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);min-height:100vh;color:#333}
-    
-    /* Modern Navbar */
-    .navbar{background:linear-gradient(90deg,rgba(255,255,255,0.95),rgba(255,255,255,0.9));backdrop-filter:blur(20px);padding:1.5rem 5%;position:fixed;width:100%;top:0;z-index:1000;box-shadow:0 8px 32px rgba(0,0,0,0.1)}
-    .nav-container{max-width:1200px;margin:0 auto;display:flex;justify-content:space-between;align-items:center}
-    .logo{font-size:2.2rem;font-weight:800;background:linear-gradient(45deg,#ff6b6b,#feca57);background-clip:text;-webkit-background-clip:text;-webkit-text-fill-color:transparent}
-    .nav-links{display:flex;list-style:none;gap:2rem}
-    .nav-links a{color:#333;font-weight:600;padding:0.8rem 1.5rem;border-radius:50px;text-decoration:none;transition:all 0.3s ease}
-    .nav-links a:hover{background:#ff6b6b;color:white;transform:translateY(-2px)}
-
-    /* Hero Section */
-    .hero{padding:140px 5% 80px;text-align:center;background:linear-gradient(135deg,#667eea 0%,#764ba2 50%,#f093fb 100%)}
-    .hero-content{max-width:900px;margin:0 auto}
-    .hero h1{font-size:4rem;font-weight:900;margin-bottom:1.5rem;color:white;text-shadow:0 4px 20px rgba(0,0,0,0.3)}
-    .hero .subtitle{font-size:1.4rem;color:rgba(255,255,255,0.95);margin-bottom:2.5rem;line-height:1.6}
-    .buttons{display:flex;justify-content:center;gap:1.5rem;flex-wrap:wrap}
-    .btn-main{padding:1.2rem 3rem;font-size:1.2rem;font-weight:700;border:none;border-radius:50px;background:linear-gradient(45deg,#ff6b6b,#ff8e8e);color:white;text-decoration:none;box-shadow:0 10px 30px rgba(255,107,107,0.4);transition:all 0.3s ease}
-    .btn-main:hover{transform:translateY(-5px);box-shadow:0 20px 40px rgba(255,107,107,0.6)}
-    .btn-outline{padding:1rem 2.5rem;font-weight:600;border:2px solid white;color:white;border-radius:50px;text-decoration:none;transition:all 0.3s ease}
-    .btn-outline:hover{background:white;color:#333;transform:translateY(-3px)}
-
-    /* Sections */
-    .section{padding:100px 5%;max-width:1200px;margin:0 auto}
-    .section-title{font-size:3rem;text-align:center;font-weight:800;margin-bottom:3rem;background:linear-gradient(45deg,#ff6b6b,#feca57);background-clip:text;-webkit-background-clip:text;-webkit-text-fill-color:transparent}
-
-    /* Feature Cards */
-    .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:2rem}
-    .feature{background:white;padding:2.5rem;border-radius:20px;box-shadow:0 15px 35px rgba(0,0,0,0.1);text-align:center;transition:all 0.3s ease}
-    .feature:hover{transform:translateY(-10px);box-shadow:0 25px 50px rgba(0,0,0,0.15)}
-    .feature-icon{font-size:3.5rem;background:linear-gradient(45deg,#ff6b6b,#feca57);background-clip:text;-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:1rem}
-    .feature h3{font-size:1.5rem;margin-bottom:1rem;color:#333}
-    .feature p{color:#666;line-height:1.6}
-
-    /* Stats */
-    .stats{background:white;padding:4rem;border-radius:20px;margin:4rem auto;max-width:1000px;display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:2rem;text-align:center;box-shadow:0 20px 40px rgba(0,0,0,0.1)}
-    .stat-item h4{font-size:2.8rem;font-weight:900;background:linear-gradient(45deg,#ff6b6b,#feca57);background-clip:text;-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin-bottom:0.5rem}
-    .stat-item p{font-size:1.1rem;color:#666;font-weight:600}
-
-    /* Groups */
-    .group{background:linear-gradient(135deg,rgba(255,255,255,0.9),rgba(255,255,255,0.8));backdrop-filter:blur(10px);padding:2.5rem;border-radius:20px;margin-bottom:2rem;border:1px solid rgba(255,255,255,0.5);transition:all 0.3s ease;box-shadow:0 10px 30px rgba(0,0,0,0.1)}
-    .group:hover{transform:translateY(-5px);box-shadow:0 20px 40px rgba(0,0,0,0.15)}
-    .group-header{display:flex;align-items:center;margin-bottom:1.5rem}
-    .group-avatar{width:70px;height:70px;border-radius:50%;background:linear-gradient(45deg,#ff6b6b,#feca57);color:white;font-size:1.5rem;font-weight:800;display:flex;align-items:center;justify-content:center;margin-right:1.5rem}
-    .group h3{font-size:1.8rem;color:#333;margin:0}
-    .group-type{background:linear-gradient(45deg,#ff6b6b,#feca57);color:white;padding:0.5rem 1.5rem;border-radius:25px;font-size:0.9rem;font-weight:600;display:inline-block;margin-top:1rem}
-    .group-buttons{display:flex;gap:1rem;margin-top:2rem;flex-wrap:wrap}
-
-    /* CTA Section */
-    .cta-section{background:linear-gradient(135deg,#ff6b6b,#feca57);padding:100px 5%;text-align:center;color:white}
-    .cta-content{max-width:800px;margin:0 auto}
-    .cta-h1{font-size:3.5rem;font-weight:900;margin-bottom:1.5rem}
-    .cta-p{font-size:1.3rem;margin-bottom:3rem}
-
-    /* Footer */
-    .footer{background:#2c3e50;color:white;padding:4rem 5% 2rem;text-align:center}
-    .footer-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:2rem;max-width:1200px;margin:0 auto 2rem}
-    .footer h3{margin-bottom:1rem;font-size:1.4rem}
-    .footer a{color:rgba(255,255,255,0.8);text-decoration:none;display:block;margin-bottom:0.5rem;transition:color 0.3s}
-    .footer a:hover{color:#feca57}
-    .social{display:flex;justify-content:center;gap:1.5rem;margin:2rem 0}
-    .social a{width:55px;height:55px;background:#34495e;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:1.3rem;color:white;transition:all 0.3s}
-    .social a:hover{background:#feca57;transform:translateY(-5px)}
-
-    /* Responsive */
-    @media(max-width:768px){
-      .hero h1{font-size:2.8rem}
-      .nav-links{gap:1rem;flex-wrap:wrap}
-      .buttons{flex-direction:column;align-items:center}
-      .btn-main,.btn-outline{width:100%;max-width:350px;text-align:center}
-      .section{padding:80px 5%}
-      .section-title{font-size:2.2rem}
-      .stats-grid{grid-template-columns:repeat(2,1fr)}
-    }
-  </style>
-</head>
-<body>
-  <!-- Navigation -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="logo">🎲 JOKERLUDO</div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#groups">Groups</a></li>
-        <li><a href="#join">Join Now</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Hero -->
-  <section class="hero" id="home">
-    <div class="hero-content">
-      <h1>Win Real Money Daily!</h1>
-      <p class="subtitle">Join India's Most Trusted Ludo WhatsApp Groups • ₹5000 Daily Tournaments • Instant UPI Withdrawals</p>
-      <div class="buttons">
-        <a href="#groups" class="btn-main">🎮 Browse Groups</a>
-        <a href="#join" class="btn-outline">🚀 Start Winning</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Features -->
-  <section class="section" id="features">
-    <h2 class="section-title">Why Choose JokerLudo?</h2>
-    <div class="features">
-      <div class="feature">
-        <div class="feature-icon">✅</div>
-        <h3>100% Verified Groups</h3>
-        <p>Every group manually checked for active players and real payouts. No scams, guaranteed!</p>
-      </div>
-      <div class="feature">
-        <div class="feature-icon">🏆</div>
-        <h3>₹5000 Daily Tournaments</h3>
-        <p>Ludo King, Ludo Star, Yalla Ludo cash matches every day with huge prize pools</p>
-      </div>
-      <div class="feature">
-        <div class="feature-icon">⚡</div>
-        <h3>Instant UPI Payouts</h3>
-        <p>Withdraw to PhonePe, GPay, Paytm instantly. No waiting, no hassle!</p>
-      </div>
-      <div class="feature">
-        <div class="feature-icon">📱</div>
-        <h3>24/7 WhatsApp Support</h3>
-        <p>Live support team ready to help with group joins and payment issues instantly</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Stats -->
-  <div class="stats">
-    <div class="stat-item">
-      <h4>15K+</h4>
-      <p>Active Players</p>
-    </div>
-    <div class="stat-item">
-      <h4>750+</h4>
-      <p>Verified Groups</p>
-    </div>
-    <div class="stat-item">
-      <h4>₹75L+</h4>
-      <p>Total Winnings</p>
-    </div>
-    <div class="stat-item">
-      <h4>99.9%</h4>
-      <p>Success Rate</p>
+<header>
+  <div class="container navbar">
+    <div class="logo">🃏 Joker Ludo</div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="ludo.html">Ludo Groups</a>
+      <a href="Whatsappludogrouplink.html">WhatsApp</a>
+      <a href="addgroup.html">List Your Group</a>
+      <a href="contact.html">Contact</a>
     </div>
   </div>
-
-  <!-- Groups -->
-  <section class="section" id="groups">
-    <h2 class="section-title">🔥 Top Groups Right Now</h2>
-    
-    <div class="group">
-      <div class="group-header">
-        <div class="group-avatar">LK</div>
-        <h3>Ludo King Pro League</h3>
-      </div>
-      <p>Daily ₹5000 cash tournaments • 500+ professional players • Highest stakes available</p>
-      <span class="group-type">Premium Earning</span>
-      <div class="group-buttons">
-        <a href="#" class="btn-main" style="padding:1rem 2rem;flex:1">Join WhatsApp</a>
-        <a href="#" class="btn-outline" style="padding:1rem 2rem;flex:1">Join Telegram</a>
-      </div>
-    </div>
-
-    <div class="group">
-      <div class="group-header">
-        <div class="group-avatar" style="background:linear-gradient(45deg,#4ecdc4,#44a08d)">LS</div>
-        <h3>Ludo Star Championship</h3>
-      </div>
-      <p>₹1000 to ₹10000 matches daily • Instant payouts • Pro vs Pro battles only</p>
-      <span class="group-type">Cash Tournaments</span>
-      <div class="group-buttons">
-        <a href="#" class="btn-main" style="padding:1rem 2rem;flex:1">Join WhatsApp</a>
-        <a href="#" class="btn-outline" style="padding:1rem 2rem;flex:1">Join Telegram</a>
-      </div>
-    </div>
-
-    <div class="group">
-      <div class="group-header">
-        <div class="group-avatar" style="background:linear-gradient(45deg,#45b7d1,#96c93d)">YL</div>
-        <h3>Yalla Ludo Global</h3>
-      </div>
-      <p>International players • Global tournaments • Multi-language • Big prize pools</p>
-      <span class="group-type">World Championship</span>
-      <div class="group-buttons">
-        <a href="#" class="btn-main" style="padding:1rem 2rem;flex:1">Join WhatsApp</a>
-        <a href="#" class="btn-outline" style="padding:1rem 2rem;flex:1">Join Discord</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <section class="cta-section" id="join">
-    <div class="cta-content">
-      <h1 class="cta-h1">Ready to Win ₹5000+ Today?</h1>
-      <p class="cta-p">Join 15,000+ players already earning real money daily!</p>
-      <a href="#" class="btn-main" style="padding:1.5rem 4rem;font-size:1.3rem">🚀 Start Earning Now</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="footer" id="contact">
-    <div class="footer-grid">
-      <div>
-        <h3>🎲 JOKERLUDO</h3>
-        <p>India's #1 platform for verified Ludo WhatsApp groups with real money tournaments</p>
-      </div>
-      <div>
-        <h3>Quick Links</h3>
-        <a href="#home">🏠 Home</a>
-        <a href="#features">✨ Features</a>
-        <a href="#groups">🎮 Groups</a>
-        <a href="#join">⚡ Join</a>
-      </div>
-      <div>
-        <h3>Platforms</h3>
-        <a href="#"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-        <a href="#"><i class="fab fa-telegram"></i> Telegram</a>
-        <a href="#"><i class="fab fa-discord"></i> Discord</a>
-      </div>
-      <div>
-        <h3>Support</h3>
-        <a href="#">📱 24/7 WhatsApp</a>
-        <a href="#">🔒 Privacy Policy</a>
-        <a href="#">📋 Terms of Service</a>
-      </div>
-    </div>
-    <div class="social">
-      <a href="#"><i class="fab fa-whatsapp"></i></a>
-      <a href="#"><i class="fab fa-telegram"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-      <a href="#"><i class="fab fa-discord"></i></a>
-    </div>
-    <p>© 2026 JokerLudo - Made with ❤️ for Ludo Lovers | India Ka #1 Gaming Hub</p>
-  </footer>
-
-  <script>
-    // Smooth scrolling
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
-      });
-    });
-  </script>
-</body>
-</html>
+</header>
