--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Joker Ludo Group</title>
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
 <header>
   <div class="container navbar">
     <div class="logo">🃏 Joker Ludo</div>
@@ -10,3 +22,48 @@
     </div>
   </div>
 </header>
+
+<section class="hero">
+  <div class="container">
+    <h1>India’s Trusted Joker Ludo Groups Platform</h1>
+    <p>Join & List Your Ludo Groups Easily</p>
+    <a href="ludo.html" class="btn">Browse Groups</a>
+    <a href="addgroup.html" class="btn">List Your Group</a>
+  </div>
+</section>
+
+<section class="categories">
+  <div class="container">
+    <h2>Group Categories</h2>
+    <div class="grid">
+
+      <div class="card">
+        <h3>🎮 Ludo Cash Groups</h3>
+        <p>Daily active Ludo matches</p>
+        <a href="ludo.html" class="btn">View Groups</a>
+      </div>
+
+      <div class="card">
+        <h3>📱 WhatsApp Groups</h3>
+        <p>Verified WhatsApp Ludo groups</p>
+        <a href="Whatsappludogrouplink.html" class="btn">View Groups</a>
+      </div>
+
+      <div class="card">
+        <h3>🏆 Tournament Groups</h3>
+        <p>Big prize Ludo tournaments</p>
+        <a href="earning-ludo-groups.html" class="btn">View Groups</a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<footer>
+  <div class="container">
+    <p>© 2026 Joker Ludo – All Rights Reserved</p>
+  </div>
+</footer>
+
+</body>
+</html>
