Revise WhatsApp Ludo group link HTML structure

--- a/Whatsappludogrouplink.html
+++ b/Whatsappludogrouplink.html
@@ -1,129 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WhatsApp Ludo Group Links | Active & Live Groups</title>
-    <meta name="description" content="Find the best and most active WhatsApp Ludo group links including Yalla Ludo, Ludo Star, betting, Telugu, Titan, and more. Join real-time Ludo WhatsApp groups now." />
-    <meta name="keywords" content="whatsapp ludo group link, yalla ludo group, zupee ludo whatsapp group, ludo king betting group, telugu ludo whatsapp group, titan ludo whatsapp, coin seller whatsapp group" />
-    <link rel="canonical" href="https://ludogrouplink.com/Whatsappludogrouplink" />
-      <!-- ✅ Google AdSense Code -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
-     crossorigin="anonymous"></script>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        background-color: #fff;
-        color: #111;
-      }
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>WhatsApp Ludo Groups - Joker Ludo</title>
+<link rel="stylesheet" href="style.css">
+</head>
 
-      header,
-      footer {
-        background-color: #f4f4f4;
-        padding: 20px;
-        text-align: center;
-      }
+<body>
 
-      main {
-        padding: 20px;
-      }
+<header>
+  <div class="container navbar">
+    <div class="logo">🃏 Joker Ludo</div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="ludo.html">Ludo Groups</a>
+      <a href="addgroup.html">List Your Group</a>
+    </div>
+  </div>
+</header>
 
-      h1, h2, h3 {
-        color: #222;
-      }
+<section class="categories">
+  <div class="container">
+    <h2>WhatsApp Ludo Groups</h2>
+    <p style="text-align:center; margin-bottom:40px;">
+      Join verified WhatsApp Ludo groups below.
+    </p>
 
-      .group-card {
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        padding: 15px;
-        margin: 10px 0;
-        background: #fdfdfd;
-      }
+    <div class="grid">
 
-      .group-card h4 {
-        margin: 0;
-      }
+      <div class="card">
+        <h3>Joker WhatsApp Group 01</h3>
+        <a href="join.html" class="btn">Join Now</a>
+      </div>
 
-      .group-card a {
-        display: inline-block;
-        margin-top: 10px;
-        background: #28a745;
-        color: #fff;
-        padding: 6px 12px;
-        text-decoration: none;
-        border-radius: 4px;
-      }
+      <div class="card">
+        <h3>Joker WhatsApp Group 02</h3>
+        <a href="join.html" class="btn">Join Now</a>
+      </div>
 
-      ul {
-        padding-left: 20px;
-      }
+      <div class="card">
+        <h3>Joker WhatsApp Group 03</h3>
+        <a href="join.html" class="btn">Join Now</a>
+      </div>
 
-      ul li {
-        margin-bottom: 6px;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Header -->
-    <header>
-      <h1>WhatsApp Ludo Group Links</h1>
-      <p>Join Live Ludo Groups | Yalla | Titan | Betting | Telugu</p>
-    </header>
+    </div>
+  </div>
+</section>
 
-    <!-- Main Content -->
-    <main>
-      <section>
-        <h2>Join Active WhatsApp Ludo Groups</h2>
-        <p>
-          Welcome to the biggest collection of active <strong>WhatsApp Ludo Group Links</strong>. Whether you're looking for <strong>Yalla Ludo</strong> rooms, <strong>Ludo Star coin sellers</strong>, or <strong>betting groups</strong> — this is your one-stop destination to join Ludo fans across India and the world!
-        </p>
-      </section>
+<footer>
+  <div class="container">
+    <p>© 2026 Joker Ludo – All Rights Reserved</p>
+  </div>
+</footer>
 
-      <section>
-        <h3>🔥 Featured Groups</h3>
-        <div class="group-card">
-          <h4>Yalla Ludo Tournament 🇮🇳</h4>
-          <a href="https://chat.whatsapp.com/xyz123">Join Group</a>
-        </div>
-        <div class="group-card">
-          <h4>Zupee Ludo Earners 💸</h4>
-          <a href="https://chat.whatsapp.com/abc456">Join Group</a>
-        </div>
-        <div class="group-card">
-          <h4>Ludo Titan Competitive ⚔️</h4>
-          <a href="https://chat.whatsapp.com/def789">Join Group</a>
-        </div>
-        <div class="group-card">
-          <h4>Coin Seller Group 🔄</h4>
-          <a href="https://chat.whatsapp.com/ghi000">Join Group</a>
-        </div>
-        <div class="group-card">
-          <h4>Telugu Ludo Warriors 🎯</h4>
-          <a href="https://chat.whatsapp.com/jkl111">Join Group</a>
-        </div>
-      </section>
-
-      <section>
-        <h3>📌 Related Topics</h3>
-        <ul>
-          <li>whatsapp ludo group link</li>
-          <li>whatsapp ludo group link india</li>
-          <li>active whatsapp ludo group link</li>
-          <li>yalla ludo whatsapp group link</li>
-          <li>ludo star coin seller whatsapp group link</li>
-          <li>telugu ludo whatsapp group link</li>
-          <li>ludo titan whatsapp group link</li>
-          <li>zupee ludo whatsapp group link</li>
-          <li>ludo king betting whatsapp group link</li>
-          <li>ludo whatsapp group link 2024</li>
-        </ul>
-      </section>
-    </main>
-
-    <!-- Footer -->
-    <footer>
-      <p>© 2025 LudoGroupLink.com | All Rights Reserved</p>
-    </footer>
-  </body>
+</body>
 </html>
